<resources>
    <string name="app_name">LIttle Calculator</string>
    <string name="buttonEqualsText">=</string>
    <string name="initializedSolutionOutputText">0.00</string>
    <string name="enter_number">Enter Number</string>
    <string name="plusRadioButton">+</string>
    <string name="minusRadioButton">-</string>
    <string name="multiplyRadioButton">*</string>
    <string name="divideRadioButton">/</string>
    <string name="invalid_input">Invalid input</string>
    <string name="clear">clear</string>
    <string name="little_calculator_logo">Little Calculator Logo</string>
    <string name="welcome_to_little_calculator">Welcome to Little Calculator!</string>
    <string name="fab">FAB</string>
</resources>