<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bckgrnd.color"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textViewSoluOutput"
        android:layout_width="360dp"
        android:layout_height="99dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="26dp"
        android:background="@drawable/border"
        android:gravity="end|center"
        android:padding="20dp"
        android:text="@string/initializedSolutionOutputText"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="100dp"
        android:backgroundTint="@color/button.color"
        android:onClick="handleButton"
        android:text="@string/buttonEqualsText"
        android:textColor="@color/black"
        android:textSize="44sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewSoluOutput" />

    <Button
        android:id="@+id/clearButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="89dp"
        android:layout_marginTop="39dp"
        android:layout_marginEnd="40dp"
        android:backgroundTint="@color/button.color"
        android:onClick="handleClearButton"
        android:text="@string/clear"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewSoluOutput" />

    <EditText
        android:id="@+id/editTextNumDeci"
        android:layout_width="210dp"
        android:layout_height="56dp"
        android:layout_marginStart="101dp"
        android:layout_marginTop="123dp"
        android:layout_marginEnd="100dp"
        android:autofillHints="number"
        android:ems="10"
        android:hint="@string/enter_number"
        android:inputType="numberDecimal"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewSoluOutput" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="368dp"
        android:layout_height="75dp"
        android:layout_marginStart="21dp"
        android:layout_marginEnd="22dp"
        android:layout_marginBottom="311dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <RadioButton
            android:id="@+id/plusRadioButton"
            android:layout_width="68dp"
            android:layout_height="58dp"
            android:layout_marginStart="20dp"
            android:text="@string/plusRadioButton"
            android:textSize="35sp" />

        <RadioButton
            android:id="@+id/minusRadioButton"
            android:layout_width="68dp"
            android:layout_height="58dp"
            android:layout_marginStart="20dp"
            android:text="@string/minusRadioButton"
            android:textSize="35sp" />

        <RadioButton
            android:id="@+id/multiplyRadioButton"
            android:layout_width="68dp"
            android:layout_height="58dp"
            android:layout_marginStart="20dp"
            android:text="@string/multiplyRadioButton"
            android:textAlignment="center"
            android:textSize="35sp" />

        <RadioButton
            android:id="@+id/divideRadioButton"
            android:layout_width="68dp"
            android:layout_height="58dp"
            android:layout_marginStart="20dp"
            android:text="@string/divideRadioButton"
            android:textAlignment="center"
            android:textSize="35sp" />
    </RadioGroup>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="410dp"
        android:layout_height="311dp"
        android:layout_marginEnd="1dp"
        android:contentDescription="@string/little_calculator_logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/little_calculator_logo_cropped" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/button.color"
        android:clickable="true"
        android:contentDescription="@string/fab"
        android:focusable="true"
        app:srcCompat="@drawable/baseline_info_24"
        android:onClick="handleFabButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.929"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>